--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -15,10 +15,20 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write
 
     steps:
     - name: Checkout source code
       uses: actions/checkout@v4
+
+    - name: Get Next Version
+      id: semver
+      uses: ietf-tools/semver-action@v1
+      with:
+        token: ${{ github.token }}
+        patchList: fix, bugfix, perf, refactor, test, tests, chore, ci
+        branch: main
+        skipInvalidTags: true
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
@@ -40,4 +50,6 @@ jobs:
         file: Dockerfile
         platforms: linux/amd64
         push: true
-        tags: ghcr.io/ietf-tools/legacy-base:latest
+        build-args: |
+          VERSION=${{ steps.semver.outputs.nextStrict }}
+        tags: ghcr.io/${{ github.repository }}:${{ steps.semver.outputs.nextStrict }}, ghcr.io/${{ github.repository }}:latest
