--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -1,4 +1,5 @@
 name: Build and Publish legacy-base
+run-name: Publish build ${{ github.run_number }} of branch ${{ github.ref_name }} by @${{ github.actor }}
 
 on:
   workflow_dispatch:
@@ -24,6 +25,17 @@ jobs:
         branch: main
         skipInvalidTags: true
 
+    - name: Create Draft Release
+      uses: ncipollo/release-action@v1.13.0
+      with:
+        prerelease: true
+        draft: false
+        commit: ${{ github.sha }}
+        tag: ${{ steps.semver.outputs.nextStrict }}
+        name: ${{ steps.semver.outputs.nextStrict }}
+        body: '*pending*'
+        token: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
 
@@ -47,3 +59,24 @@ jobs:
         build-args: |
           VERSION=${{ steps.semver.outputs.nextStrict }}
         tags: ghcr.io/${{ github.repository }}:${{ steps.semver.outputs.nextStrict }}, ghcr.io/${{ github.repository }}:latest
+
+    - name: Update CHANGELOG
+      id: changelog
+      uses: requarks/changelog-action@v1
+      with:
+        token: ${{ github.token }}
+        fromTag: ${{ steps.semver.outputs.nextStrict }}
+        toTag: ${{ steps.semver.outputs.current }}
+        excludeTypes: ''
+        writeToFile: false
+
+    - name: Create Release
+      uses: ncipollo/release-action@v1.13.0
+      with:
+        allowUpdates: true
+        makeLatest: true
+        draft: false
+        tag: ${{ steps.semver.outputs.nextStrict }}
+        name: ${{ steps.semver.outputs.nextStrict }}
+        body: ${{ steps.changelog.outputs.changes }}
+        token: ${{ secrets.GITHUB_TOKEN }}
