fix: Build and publish arm64 image
Fixes #17

--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -54,7 +54,7 @@ jobs:
       with:
         context: .
         file: Dockerfile
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         push: true
         build-args: |
           VERSION=${{ steps.semver.outputs.nextStrict }}
